--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 Babel==2.9.1
 bcrypt==3.2.0
+bleach==5.0.0
 blinker==1.4
 cffi==1.15.0
 click==8.1.2
@@ -24,11 +25,12 @@ Jinja2==3.1.1
 MarkupSafe==2.1.1
 passlib==1.7.4
 pycparser==2.21
+PyQRCode==1.2.1
 pytz==2022.1
 six==1.16.0
 speaklater==1.3
 SQLAlchemy==1.4.35
+webencodings==0.5.1
 Werkzeug==2.1.1
 WTForms==3.0.1
 zipp==3.8.0
-pyqrcode
