--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,7 @@ Flask-Principal==0.4.0
 Flask-Security-Too==4.1.3
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
+gevent==21.12.0
 greenlet==1.1.2
 gunicorn==20.1.0
 idna==3.3
@@ -34,3 +35,5 @@ webencodings==0.5.1
 Werkzeug==2.1.1
 WTForms==3.0.1
 zipp==3.8.0
+zope.event==4.5.0
+zope.interface==5.4.0
