--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,14 +23,20 @@ idna==3.3
 importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
+joblib==1.1.0
 MarkupSafe==2.1.1
+numpy==1.22.3
 passlib==1.7.4
 pycparser==2.21
 PyQRCode==1.2.1
 pytz==2022.1
+scikit-learn==1.0.2
+scipy==1.8.0
 six==1.16.0
+sklearn==0.0
 speaklater==1.3
 SQLAlchemy==1.4.35
+threadpoolctl==3.1.0
 webencodings==0.5.1
 Werkzeug==2.1.1
 WTForms==3.0.1
