--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -26,9 +26,11 @@ Jinja2==3.1.1
 joblib==1.1.0
 MarkupSafe==2.1.1
 numpy==1.22.3
+pandas==1.4.2
 passlib==1.7.4
 pycparser==2.21
 PyQRCode==1.2.1
+python-dateutil==2.8.2
 pytz==2022.1
 scikit-learn==1.0.2
 scipy==1.8.0
