--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -42,6 +42,7 @@ threadpoolctl==3.1.0
 webencodings==0.5.1
 Werkzeug==2.1.1
 WTForms==3.0.1
+xgboost==1.5.2
 zipp==3.8.0
 zope.event==4.5.0
 zope.interface==5.4.0
